--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
+.buttons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  column-gap: 1rem;
+}
+.navbar-container {
+  background-color: #ffe53b;
+  background-image: linear-gradient(
+    237deg,
+    #ff25259d 74%,
+    #ffe53b 0%,
+    #ff2525 74%
+  );
+  box-shadow: 0 3px 4px #ff7b0077;
+}
+.title {
+  color: rgb(255, 255, 255);
+}
+.btn-color {
+  color: #ffffffa6;
+  background-color: transparent;
+}
+.btn-color:hover {
+  background-color: #ff25259d;
+  border: none;
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-color: #ff676777;
+  background-image: linear-gradient(90deg, #ffb96aa9 0%, #fcff506c 100%);
+}
+.icon-dis {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.right-float {
+  float: right;
+}
+.page-title {
+  color: #555;
+  text-transform: uppercase;
+}
+.dashboard-card {
+  border-radius: 0.5rem;
+}
+.btn-containers {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 0.5rem;
+}
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+.btn-container-primary {
+  width: 20%;
+}
+.profile-container {
+  display: flex;
+  justify-content: center;
+}
+.image-container {
+  width: 200;
+  height: 200;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+  object-fit: cover;
+}
+.profile-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  border-radius: 1rem;
+  text-align: center;
 }
-
-.App-link {
-  color: #61dafb;
+.card-name,
+.card-age,
+.card-mail,
+.card-desc {
+  color: #555;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loading {
+  display: flex;
+  min-height: 75vh;
+  justify-content: center;
+  align-items: center;
+}
+.theader {
+  color: #555;
 }
