--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,9 @@
   display: flex;
   justify-content: center;
 }
-.btn-container-primary {
+/* .btn-container-primary {
   width: 20%;
-}
+} */
 .profile-container {
   display: flex;
   justify-content: center;
